# somflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  detect.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
docs/: api.md  performance.md  research.md  roadmap.md  troubleshooting.md
docs/assets/: demo.tape
docs/examples/: vscode-287-yolo-manifest.json  vscode-manifest.json
docs/releases/: v0.4.0.md  v0.4.1.md  v0.5.0.md
docs/research/: ocr-rescan-experiments.md  standard-prompt-investigation.md
docs/specs/: dark-mode-detection.md  multi-scale-ocr-rescan.md
examples/: custom_backend.py  use_as_library.py
somflow/: __init__.py  annotate.py  benchmark.py  cli.py  florence.py  manifest.py  merge.py  quadrants.py  run.py  vision.py
somflow/backends/: __init__.py  base.py  (+3 more)
tests/: conftest.py  test_annotate.py  test_backend_base.py  test_backend_equivalence.py  test_backend_selector.py  test_batch_cli.py  test_bench_cli.py  test_benchmark.py  test_coreml_backend.py  test_correct.py  test_encoder_bridge.py  test_filter.py  test_florence.py  test_group.py  test_manifest.py  test_merge.py  test_mlx_backend.py  test_mlx_batch.py  test_patch.py  test_patch_cli.py  test_pipeline_e2e.py  test_quadrants.py  test_rescan.py  test_vision_detect.py
tools/: convert_davit_coreml.py  quick_benchmark.py  vision-detect
uitag/: __init__.py  batch_cli.py  bench_cli.py  cli.py  correct.py  filter.py  merge.py  patch.py  patch_cli.py  rescan.py  run.py  schema.json  types.py  vision.py  yolo.py
(+3 files in other folders)
